--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,11 @@
 			</ul>
 			<button data-ng-click="clearErrors()">Clear Errors</button>
 		</aside>
-		<form name="newNoteForm" data-ng-submit="createNewNote()">
-			<input type="text" required data-ng-model="newNote.noteBody">
-			<button type="submit" data-ng-disabled="newNoteForm.$invalid">Create New Note</button>
-		</form>
+		<div data-note-form-directive
+			data-save="createNewNote(note)"
+			data-button-text="'Create New Note'"
+			data-label-text="'Create A New Note'"></div>
+			
 		<ul data-ng-repeat="note in notes">
 			<li>{{note.noteBody}}
 				<button data-ng-click="removeNote(note)">Delete</button>
