--- a/app/index.html
+++ b/app/index.html
@@ -5,33 +5,8 @@
 	<title>Client Side</title>
 </head>
 <body data-ng-app="notesApp">
-	<main data-ng-controller="notesController" data-ng-init="getAll()">
-		<h1>Notes:</h1>
-		<aside data-ng-if="errors.length">
-			<h2>Errors:</h2>
-			<ul data-ng-repeat="error in errors">
-				<li>{{error.msg}}</li>
-			</ul>
-			<button data-ng-click="clearErrors()">Clear Errors</button>
-		</aside>
-		<div data-note-form-directive
-			data-save="createNewNote(note)"
-			data-button-text="'Create New Note'"
-			data-label-text="'Create A New Note'"></div>
-			
-		<ul data-ng-repeat="note in notes">
-			<li>{{note.noteBody}}
-				<button data-ng-click="removeNote(note)">Delete</button>
-				<button data-ng-if="!note.editing" data-ng-click="note.editing = true">Edit</button>
-				<form name="{{'editing' + note._id}}" data-ng-if="note.editing" data-ng-submit="saveNote(note)">
-					<input type="text" data-ng-model="note.noteBody" data-ng-model-options="{ updateOn: 'submit' }">
-					<button type="submit">Save Changes</button>
-					<button type="button" data-ng-click="note.editing = false; $rollbackViewValue()">Cancel</button>
-				</form>
-			</li>
-		</ul>
-
-	</main>
+	<div data-logout-directive></div>
+	<main data-ng-view></main>	
 	<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
