--- a/app/index.html
+++ b/app/index.html
@@ -21,13 +21,16 @@
 			
 		<ul data-ng-repeat="note in notes">
 			<li>{{note.noteBody}}
-				<button data-ng-click="removeNote(note)">Delete</button>
-				<button data-ng-if="!note.editing" data-ng-click="note.editing = true">Edit</button>
-				<form name="{{'editing' + note._id}}" data-ng-if="note.editing" data-ng-submit="saveNote(note)">
-					<input type="text" data-ng-model="note.noteBody" data-ng-model-options="{ updateOn: 'submit' }">
-					<button type="submit">Save Changes</button>
-					<button type="button" data-ng-click="note.editing = false; $rollbackViewValue()">Cancel</button>
-				</form>
+				<button data-ng-disabled="!note._id" data-ng-click="removeNote(note)">Delete</button>
+				<button data-ng-if="!note.editing" data-ng-disabled="!note._id" data-ng-click="toggleEdit(note)">Edit</button>
+				<div data-note-form-directive
+					data-save="saveNote(note)"
+					data-button-text="'Save Changes'"
+					data-label-text="'Editing Note: '"
+					data-ng-if="note.editing"
+					data-note="note">
+					<button type="button" data-ng-click="toggleEdit(note)">Cancel</button>
+				</div>
 			</li>
 		</ul>
 
