--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Client Side</title>
+	<meta charset="UTF-8"
+	<title>Notes</title>
 </head>
-<body data-ng-app="notesApp">
-	<div data-logout-directive></div>
-	<main data-ng-view></main>	
+<body>
 	<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
